--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -177,7 +177,7 @@
         <v-row class="align-center py-2 px-2 mx-0" justify="space-around" no-gutters>
           <v-col class="align-center py-1 px-1 mx-0" >
             <v-card class="px-2 py-2" max-width="300">
-              <v-rating :value="4.5" color="amber" dense half-increments readonly size="14"></v-rating>
+              <v-rating :value="4.5" color="amber" half-increments readonly size="14"></v-rating>
               <div class="grey--text ms-4"> Calificación 4.5 (413)</div>
             </v-card>
           </v-col>
