--- a/app/Templates/usr_login.html
+++ b/app/Templates/usr_login.html
@@ -10,7 +10,7 @@
   <v-row class="align-center pa-2" justify="center">
     <v-col cols="12" sm="6" md="4" class="px-2 py-2">
       <v-card class="align-center pa-2" elevation=15 width="350">
-        <v-card-title>Acceso a la Aplicación</v-card-title>    
+        <v-card-title>Acceso</v-card-title>    
           <form name="formulariologin" submit="submit" method="POST">
               <v-text-field
                 name="usr_email"
