--- a/app/Templates/usr_registro.html
+++ b/app/Templates/usr_registro.html
@@ -8,7 +8,7 @@
   <v-row class="pa-2" justify="center">
     <v-col cols="12" sm="6" md="4" class="align-center px-2 py-2">
       <v-card class="pa-2" elevation=15 width="350">
-        <v-card-title>Crear Usuario</v-card-title>    
+        <v-card-title>Registro</v-card-title>    
           <form name="formularioregistro" submit="submit" method="POST">
             <v-text-field
               name="usr_name"
