Update comentarios y reservas

--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -42,8 +42,8 @@
             </v-btn>
             {% endif %}
       </v-app-bar>
-      <v-main class="pt-8">
-        <v-parallax height="500" src="{{ url_for('static', filename='img/portada.jpg') }}">
+      <v-main class="pt-9 mt-5">
+        <v-parallax height="600" src="{{ url_for('static', filename='img/portada.jpg') }}">
           <v-row class="d-flex align-center" justify="center">
             <v-col class="align-center text-center">
               <h1 class="text-h2 font-weight-bold black--text mb-4">
