--- a/app/Templates/usr_reservas.html
+++ b/app/Templates/usr_reservas.html
@@ -9,12 +9,11 @@
 {% block btn_about %} Acerca de {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 {% block contenido_1 %}
-
 <v-container fluid>
   {% if is_login %}
-  <v-row class="py-2 px-2" justify="center">
-    <v-card class="align-center" elevation=15 loading="loading" height="640" width="670" justify="space-around">
-        <v-card-title class="font-weight-bold ml-0">Realizar tu Reserva</v-card-title>
+  <v-row class="py-1" no-gutters justify="center">
+    <v-card class="align-center" elevation=15 loading="loading" height="550" width="670">
+        <v-card-title class="font-weight-bold">Realiza tu Reserva</v-card-title>
         <v-container>
           <v-form name="formualrioreserva" lazy-validation submit="submit" method="POST">
             <v-select
@@ -43,6 +42,7 @@
             title="Nombre del Usuario de la Reserva"
             disabled
             value="{{session['usr_name']}}"
+            dense
             ></v-text-field>
             <v-text-field
             name="descriptions"
@@ -53,8 +53,9 @@
             prepend-icon="mdi-text"
             title="Digitar datos de la reserva"
             clearable
+            dense
             ></v-text-field>
-            <v-row class="pt-1 mx-0" justify="space-around">
+            <v-row class="d-flex pt-0 mx-0" no-gutters justify="space-around">
               <v-col>
                 <v-container fluid>
                   <v-row justify="space-around" no-gutters>
@@ -78,9 +79,8 @@
                 </v-container>
               </v-col>
             </v-row>
-            <v-row class="align-center pt-1 mx-0" justify="space-around">
+            <v-row class="d-flex align-center pt-0 mx-0" no-gutters justify="space-around">
               <v-col>
-                <v-container fluid>
                   <v-row justify="space-around" no-gutters>
                     <v-col cols="12">
                       <v-combobox
@@ -92,13 +92,12 @@
                         filled
                         solo
                         :rules="[v => !!v || 'Este campo es requerido, cuantos adultos']"
+                        dense
                       ></v-combobox>
                     </v-col>
                   </v-row>
-                </v-container>
               </v-col>
               <v-col>  
-                <v-container fluid>
                   <v-row justify="space-around" no-gutters>
                     <v-col cols="12">
                       <v-combobox
@@ -112,10 +111,9 @@
                       ></v-combobox>
                     </v-col>
                   </v-row>
-                </v-container>
               </v-col>
             </v-row>
-            <v-row class="d-flex align-center py-3 px-2 mx-0" justify="space-around">
+            <v-row class="d-flex align-center py-1 px-1" justify="space-around">
               <v-btn class="py-2 px-2" width="200" color="blue" type="submit" :disabled="!formularioreserva">Enviar Reserva</v-btn>
               <v-btn class="py-2 px-2" width="200" color="red" href="{{url_for('main.index')}}">Cancelar</v-btn>
             </v-row>
@@ -123,7 +121,7 @@
               <v-divider></v-divider>
             </v-row>
           </v-form>       
-          <v-row class="align-center py-2 px-2">
+          <v-row class="align-center py-1 px-1" no-gutters>
           <v-card-text >Digite toda la información relevante a tu reserva</v-card-text>
           </v-row>
         </v-container>
@@ -131,7 +129,7 @@
   </v-row>
   {% else %}
   <v-row class="py-2 px-2 pa-2" justify="center">
-    <v-card class="align-center pa-1" elevation=15 width="250" justify="space-around">
+    <v-card class="align-center pt-1" elevation=15 width="250" justify="space-around">
       <v-card-title class="font-weight-bold ml-0">Valida tu Reserva</v-card-title>
       <v-card-subtitle class="align-center py-2 px-2">Debes de estar registrado o haber entrado a la aplicación</v-card-title>
         <v-row class="d-flex align-center py-3 px-2 mx-0" justify="space-around">
@@ -146,9 +144,9 @@
     </v-card>
   </v-row>
   {% endif %}
+
+</v-row>
 </v-container>
-
-
 {% endblock %}
 {% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
 {% block text_footer_02 %} Hotel Demo - Atencion sin Igual - Todos los derechos reservados.{% endblock %}
